--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
             <a class="nav-link active" aria-current="page" routerLink="/">Accueil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/add">Ajouter</a>
+            <a class="nav-link" routerLink="/add">Ajouter un produit</a>
           </li>
         </ul>
         
